--- a/DQD/Pages/WebLivePage.xaml
+++ b/DQD/Pages/WebLivePage.xaml
@@ -106,6 +106,13 @@
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
                            Foreground="{ThemeResource AppPersonalTextColorPure}"/>
+                <HyperlinkButton Name="ActionLink" 
+                                 Content="在浏览器打开直播页面" 
+                                 Foreground="White"
+                                 FontSize="12"
+                                 Margin="0,20,10,0"
+                                 Visibility="Collapsed"
+                                 HorizontalAlignment="Right"/>
                 <Rectangle Height="1"
                        Fill="{ThemeResource DQDSummTextColor}"
                        VerticalAlignment="Bottom"/>
