--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -432,6 +432,44 @@
                         </Grid>
                         <StackPanel Orientation="Vertical" 
                                     Margin=" 0,10,0,0">
+                            <TextBlock Text="后台选项" FontWeight="Bold"
+                                   Style="{StaticResource SummaryTextStyle}"/>
+                            <Rectangle Height="1"
+                                       Margin=" 0,5,0,0"
+                                       Fill="{ThemeResource DQDSummTextColor}"/>
+                        </StackPanel>
+                        <Grid Margin="0,10,0,0" >
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="后台热点推送"
+                                   Style="{StaticResource TitleTextStyle}"/>
+                                <TextBlock Text="每隔四小时抓取一次新闻"
+                                   Style="{StaticResource SummaryTextStyle}"/>
+                            </StackPanel>
+                            <ToggleSwitch Name="ToastAutoSwitch" 
+                                      Style="{ThemeResource ThemeModeSwitch}" 
+                                      HorizontalAlignment="Right"
+                                      Margin="0,0,-100,0"
+                                      OnContent=" " 
+                                      OffContent=" " 
+                                      Toggled="Switch_Toggled" />
+                        </Grid>
+                        <Grid Margin="0,10,0,0" >
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="免打扰时间"
+                                   Style="{StaticResource TitleTextStyle}"/>
+                                <TextBlock Text="23：00 - 7：00 不接收热点推送"
+                                   Style="{StaticResource SummaryTextStyle}"/>
+                            </StackPanel>
+                            <ToggleSwitch Name="QuietTimeSwitch" 
+                                      Style="{ThemeResource ThemeModeSwitch}" 
+                                      HorizontalAlignment="Right"
+                                      Margin="0,0,-100,0"
+                                      OnContent=" " 
+                                      OffContent=" " 
+                                      Toggled="Switch_Toggled" />
+                        </Grid>
+                        <StackPanel Orientation="Vertical" 
+                                    Margin=" 0,10,0,0">
                             <TextBlock Text="其他选项" FontWeight="Bold"
                                    Style="{StaticResource SummaryTextStyle}"/>
                             <Rectangle Height="1"
@@ -440,7 +478,7 @@
                         </StackPanel>
                         <Grid Margin="0,10,0,0" >
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="省流量模式"
+                                <TextBlock Text="自动加载图片"
                                    Style="{StaticResource TitleTextStyle}"/>
                                 <TextBlock Text="启动或关闭图片的自动加载"
                                    Style="{StaticResource SummaryTextStyle}"/>
